# Harunobu

./: .clang-format  .gitignore  BUILD  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  WORKSPACE  build_debug.sh  build_release.sh  debug.sh  release.sh  run_debug.sh  run_release.sh
cmake/: FindGLM.cmake  FindRapidXML.cmake  FindSpdlog.cmake
gallery/v0.0.1/cornell-box-direct/: scene.xml
gallery/v0.0.1/veach-mis-direct/: scene.xml
include/harunobu/core/: basic.h  camera.h  common.h  film.h  image.h  image_pipeline.h  param_set.h  pmf.h  scene.h  utils.h
include/harunobu/geometry/: geometry_base.h  sphere_geo.h  tri.h
include/harunobu/integrator/: direct_illumination.h  integrator_base.h  path_tracer.h  ray_tracer.h  render_utils.h
include/harunobu/io/: mitsuba_reader.h  scene_reader.h
include/harunobu/material/: bsdf.h  diffuse.h  material_base.h  microfacet.h
include/harunobu/objects/: objects_base.h
include/harunobu/primitive/: cube.h  primitive_base.h  rect.h  sphere.h
include/harunobu/rfilter/: box_filter.h  rfilter_base.h  tent_filter.h
include/harunobu/sampler/: random_sampler.h  sampler_base.h  stratified_sampler.h
scenes/cornell-box/: LICENSE.txt  scene.xml  scene_mitsuba.xml
scenes/direct-test/: scene.xml
src/: main.cpp
src/core/: camera.cpp  film.cpp  image_pipeline.cpp  scene.cpp
src/geometry/: geometry_base.cpp  sphere_geo.cpp  tri.cpp
src/integrator/: direct_illumination.cpp  integrator_base.cpp  path_tracer.cpp  ray_tracer.cpp  render_utils.cpp
src/io/: mitsuba_reader.cpp
src/material/: material_base.cpp  microfacet.cpp
src/objects/: objects_base.cpp
src/primitive/: cube.cpp  primitive_base.cpp  rect.cpp  sphere.cpp
src/rfilter/: rfilter_base.cpp
src/sampler/: sampler_base.cpp
tools/: auto-clang-format.sh
